--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@
 install:
   - curl -O http://static.rust-lang.org/dist/rust-nightly-x86_64-unknown-linux-gnu.tar.gz
   - tar xfz rust-nightly-x86_64-unknown-linux-gnu.tar.gz
-  - (cd rust-nightly-x86_64-unknown-linux-gnu/ && sudo ./install.sh)
+#  - (cd rust-nightly-x86_64-unknown-linux-gnu/ && sudo ./install.sh)
 
 script:
-  - rustc --version
-  - make test
+  - rust-nightly-x86_64-unknown-linux-gnu/bin/rustc --version
+  - RUSTC=rust-nightly-x86_64-unknown-linux-gnu/bin/rustc make test
 
 notifications:
   email:
