--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,16 @@
+before_install:
+  - yes | sudo add-apt-repository ppa:cmrx64/cargo
+  - sudo apt-get update
+
 install:
+  - sudo apt-get install cargo
   - curl -O http://static.rust-lang.org/dist/rust-nightly-x86_64-unknown-linux-gnu.tar.gz
   - tar xfz rust-nightly-x86_64-unknown-linux-gnu.tar.gz
+  - export PATH=$PATH:$(pwd)/rust-nightly-x86_64-unknown-linux-gnu/bin
+  - rustc -v
 
 script:
-  - rust-nightly-x86_64-unknown-linux-gnu/bin/rustc --version
-  - RUSTC=rust-nightly-x86_64-unknown-linux-gnu/bin/rustc make test
+  - cargo test
 
 notifications:
   email:
