--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,12 @@
-before_install:
-  - yes | sudo add-apt-repository ppa:cmrx64/cargo
-  - sudo apt-get update
+env:
+  - LD_LIBRARY_PATH=/usr/local/lib:/usr/local/lib/rustlib/x86_64-unknown-linux-gnu/lib/
 
 install:
-  - sudo apt-get install cargo
-  - curl -O http://static.rust-lang.org/dist/rust-nightly-x86_64-unknown-linux-gnu.tar.gz
-  - tar xfz rust-nightly-x86_64-unknown-linux-gnu.tar.gz
-  - export PATH=$PATH:$(pwd)/rust-nightly-x86_64-unknown-linux-gnu/bin
-  - rustc -v
+  - curl www.rust-lang.org/rustup.sh | sudo bash
 
 script:
-  - cargo test
+  - cargo build -v
+  - cargo test -v
 
 notifications:
   email:
