--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ env:
   - LD_LIBRARY_PATH=/usr/local/lib:/usr/local/lib/rustlib/x86_64-unknown-linux-gnu/lib/
 
 install:
-  - curl www.rust-lang.org/rustup.sh | sudo bash
+  - curl https://static.rust-lang.org/rustup.sh | sudo sh -
 
 script:
   - cargo build -v
