--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,4 @@
-env:
-  - LD_LIBRARY_PATH=/usr/local/lib:/usr/local/lib/rustlib/x86_64-unknown-linux-gnu/lib/
-
-install:
-  - curl https://static.rust-lang.org/rustup.sh | sudo sh -
+language: rust
 
 script:
   - cargo build -v
