Cargo: project -> package. add description etc

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
-[project]
+[package]
 
 name = "msgpack"
+description = "MessagePack serialization implementation for Rust"
 version = "0.1.0"
+repository = "https://github.com/mneumann/rust-msgpack.git"
 authors = [
     "Michael Neumann",
     "Jason E. Aten",
