Make it compilable with rust 1.0.0-alpha.
 * Drop no longer required 'macro_rules' and 'globs' crate attributes, because they are part of the language now.
 * Replaced 'deriving' with 'derive' keyword.
 * Replaced int/uint with isize/usize respectively.
 * Match 'serialize::Decoder' and 'serialize::Encoder' interface.
 * Use num cast instead of removed 'to_*' methods.
 * Allow unstable items (because I don't know what to do with them now).
 * Fixed tests.
 * Use new '{:?}' syntax in examples instead of '{}' to print messages generated via Show trait.
 * Added myself in authors list.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ authors = [
     "Erick Tryzelaar",
     "OGINO Masanori",
     "Ian Daniher",
-    "Derek Chiang (Enchi Jiang)"
+    "Derek Chiang (Enchi Jiang)",
+    "Evgeny Safronov"
 ]
 license = "MIT/Apache-2.0"
